<resources>
    <string name="app_name">Zero</string>
    <string name="application_data_err">沒有找到數據</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_start">开始</string>
    <string name="login_loading">载入</string>
    <string name="login_pic">相册</string>
    <string name="login_exit">退出</string>
    <string name="login_preface">序言</string>
    <string name="create_user_success">创建成功</string>
    <string name="start_newer_edtext">创建你的名字</string>
    <string name="user_id_len_err">名字太长</string>
    <string name="user_id_len_null">名字不能为空</string>
    <string name="cannot_create_usr">无法创建用户,该用户可能已经存在</string>
    <string name="not_found_load_data">未找到任何存档记录</string>
    <string name="not_found_pic">没有找到图片</string>
    <string name="activity_list_empty">No matching activities found.</string>
    <string name="gallery_imgview_contentDescribe">gallery image view</string>
    <string-array name="activity_titles">
        <item>Basic usage playground</item>
        <item>Heteroheight</item>
        <item>Warp</item>
        <item>Background handle</item>
        <item>Sections</item>
        <item>CursorAdapter</item>
        <item>Multiple-choice mode</item>
        <item>Single-choice mode</item>
    </string-array>
    <string-array name="activity_descs">
        <item>            Use the menu to adjust settings related to item
            removal and drag initiation. These options are
            provided by the DragSortController class.</item>
        <item>            Demonstrates (tests) drag-sorting when list items
            have varying heights.</item>
        <item>            Demonstrates drag-scroll customization; long lists
            need fast scrolling.</item>
        <item>            Simple DragSortController customization. In this example,
            the drag handle is a background drawable; therefore, the
            drag handle hit detection mechanism needs modification. 
            Also, the floating View is given some flavor.</item>
        <item>            Demonstrates floating View control from a custom
            FloatViewManager. Restrict item drags to list sections.</item>
        <item>            Demonstrates usage of the DragSortCursorAdapter class,
            which abstracts drag-sorts with a remapping of Cursor
            positions to ListView positions.</item>
        <item>            Uses Checkable list items in multiple-choice mode.</item>
        <item>            Uses Checkable list items to allow for selectable radio
            buttons in single-choice mode.</item>
    </string-array>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="select_remove_mode">Remove modes</string>
    <string name="select_drag_init_mode">Start-drag modes</string>
    <string name="select_enables">Enable/Disable</string>
    <string name="add_header">Add header</string>
    <string name="add_footer">Add footer</string>
    <string-array name="remove_mode_labels">
        <item>Click remove</item>
        <item>Fling remove</item>
    </string-array>
    <string-array name="drag_init_mode_labels">
        <item>On down</item>
        <item>On drag</item>
        <item>On long press</item>
    </string-array>
    <string-array name="enables_labels">
        <item>Enable drag</item>
        <item>Enable sort</item>
        <item>Enable remove</item>
    </string-array>
    <string-array name="jazz_artist_names">
        <item>Brad Mehldau</item>
        <item>Joshua Redman</item>
        <item>Chick Corea</item>
        <item>Kurt Rosenwinkel</item>
        <item>Miles Davis</item>
        <item>Wayne Shorter</item>
        <item>Michael Brecker</item>
        <item>Herbie Hancock</item>
        <item>Joe Zawinul</item>
        <item>Brian Blade</item>
        <item>Jeff Ballard</item>
        <item>Larry Grenadier</item>
        <item>Keith Jarrett</item>
        <item>McCoy Tyner</item>
        <item>Stephon Harris</item>
        <item>Mark Turner</item>
    </string-array>
    <string-array name="jazz_artist_albums">
        <item>Largo, Art of the Trio 1-4, Highway Rider, Songs</item>
        <item>Elastic, Momentum, Mood Swing, Back East</item>
        <item>Light as a Feather, Akoustic Band, My Spanish Heart</item>
        <item>Deep Song, Heartcore, Our Secret World, Reflections, The Remedy: Live at the Village Vanguard, The Enemies of Energy, The Next Step</item>
    </string-array>
    <string-array name="countries">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbajan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>Brunei Darussalam</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Costa Rica</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Democratic Republic Congo</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominican Republic</item>
        <item>East Timor</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>England</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Faroe Islands</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>French Polynesia</item>
        <item>Gambia</item>
        <item>Georgia (Sakartvelo)</item>
        <item>Germany</item>
        <item>Gabon</item>
        <item>Ghana</item>
        <item>Greece</item>
        <item>Greenland - Kalaallit Nunaat</item>
        <item>Grenada</item>
        <item>Gouadeloupe</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>Guernsey</item>
        <item>Guyana</item>
        <item>Guyane</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hrvatska (Croatia)</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Korea Republic</item>
        <item>Kosovo</item>
        <item>Kurdistan</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libyan Arab Jamahiriya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macau</item>
        <item>Macedonia</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Mauritania</item>
        <item>Martinique</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Namibia</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>Netherlands Antilles</item>
        <item>New Caledonia</item>
        <item>New Zealand (Aotearoa)</item>
        <item>Nicaragua</item>
        <item>Nigeria</item>
        <item>Niue</item>
        <item>Norfolk Island</item>
        <item>Northern Ireland</item>
        <item>Northern Mariana Islands</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Palestina</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Reunion</item>
        <item>Romania</item>
        <item>Russian Federation (AsianPart)</item>
        <item>Russian Federation (European Part)</item>
        <item>Rwanda</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa (American Samoa)</item>
        <item>Samoa (Western Samoa)</item>
        <item>San Marino</item>
        <item>Saudi Arabia</item>
        <item>Scotland</item>
        <item>Senegal</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>Somaliland</item>
        <item>South Africa</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Svalbard and Jan Mayen</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syrian Arab Republic</item>
        <item>Taiwan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Tibet</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Turks and Caicos Islands</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>Uruguay</item>
        <item>USA</item>
        <item>Uzbekistan</item>
        <item>Vatican City State - Holy See</item>
        <item>Venezuela</item>
        <item>Viet Nam</item>
        <item>Virgin Islands (British)</item>
        <item>Virgin Islands (U.S.)</item>
        <item>Wales</item>
        <item>Yemen</item>
        <item>Yugoslavia</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>
</resources>