<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_ui"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <TextView
            android:id="@+id/login_tv_preface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/login_preface"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_tv_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/login_tv_preface"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/login_exit"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_tv_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/login_tv_exit"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/login_pic"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_tv_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/login_tv_pic"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/login_loading"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_tv_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/login_tv_loading"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/login_start"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>